--- a/src/main/resources/templates/edit_equipment.html
+++ b/src/main/resources/templates/edit_equipment.html
@@ -53,7 +53,7 @@
                                 th:field = "*{reportingMark}"
                                 class = "form-control"
                                 placeholder = "Reporting Mark"
-                                disabled
+                                readonly
                         />
                     </div>
                     <div class = "form-group">
@@ -97,7 +97,7 @@
                                 th:field = "*{typeId}"
                                 class = "form-control"
                                 placeholder = "Type ID"
-                                disabled
+                                readonly
                         />
                     </div>
                     <div class = "form-group">
@@ -108,7 +108,7 @@
                                 th:field = "*{length}"
                                 class = "form-control"
                                 placeholder = "Length"
-                                disabled
+                                readonly
                         />
                     </div>
                     <div class = "form-group">
@@ -119,7 +119,7 @@
                                 th:field = "*{ownerId}"
                                 class = "form-control"
                                 placeholder = "Owner ID"
-                                disabled
+                                readonly
                         />
                     </div>
                     <div class = "box-footer">
