--- a/src/main/resources/templates/edit_track.html
+++ b/src/main/resources/templates/edit_track.html
@@ -53,7 +53,7 @@
                                 th:field = "*{trackName}"
                                 class = "form-control"
                                 placeholder = "Track Name"
-                                disabled
+                                readonly
                         />
                     </div>
 
