Changes to create.htmls requiring number fields

--- a/src/main/resources/templates/create_equipment.html
+++ b/src/main/resources/templates/create_equipment.html
@@ -106,7 +106,9 @@
             <div class = "form-group">
               <label> Length </label>
               <input
-                      type = "text"
+                      type = "number"
+                      min = "20"
+                      step = "1"
                       name = "length"
                       th:field = "*{length}"
                       class = "form-control"
