--- a/src/main/resources/templates/create_track.html
+++ b/src/main/resources/templates/create_track.html
@@ -60,7 +60,9 @@
                         <div class = "form-group">
                             <label> Length </label>
                             <input
-                                    type = "text"
+                                    type = "number"
+                                    min = "40"
+                                    step = "1"
                                     name = "length"
                                     th:field = "*{length}"
                                     class = "form-control"
