--- a/src/main/resources/templates/edit_equipment.html
+++ b/src/main/resources/templates/edit_equipment.html
@@ -38,6 +38,7 @@
 </nav>
 <br>
 <br>
+<!-- Edit Equipment input form in card style. Some cells marked readonly as they shouldn't be changed -->
 <body>
 <div class = "container">
     <div class = "row">
