--- a/src/main/resources/templates/edit_track.html
+++ b/src/main/resources/templates/edit_track.html
@@ -38,6 +38,7 @@
 </nav>
 <br>
 <br>
+<!-- Edit Track input form in card style. Name cell marked readonly as it shouldn't be changed -->
 <body>
 <div class = "container">
     <div class = "row">
