--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <title>Switchlist Login</title>
 </head>
 <body>
-
+<!-- Navbar links -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -28,7 +28,7 @@
 </nav>
 <br>
 <br>
-
+<!-- Bootstrap logon form container using remote validation scripts -->
 <div class="container">
 
     <div class="row">
