--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,6 +11,7 @@
     <title>Switchlist User Registration</title>
 </head>
 <body>
+<!-- Navbar links -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -29,7 +30,7 @@
 
 <br>
 <br>
-
+<!-- Bootstrap user registration form container using remote validation scripts -->
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
