--- a/src/main/resources/templates/equipment.html
+++ b/src/main/resources/templates/equipment.html
@@ -37,6 +37,7 @@
         </ul>
     </div>
 </nav>
+<!-- Equipment list from Bootstrap list container template,  Thymeleaf fetches data to populate the table -->
 <div class="container">
     <div class="row">
         <h1 class="p-3 mb-2 bg-danger text-white"> Equipment List </h1>
