--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -35,6 +35,7 @@
         </ul>
     </div>
 </nav>
+<!-- Equipment list from Bootstrap list container template,  Thymeleaf fetches data to populate the table -->
 <div class = "container">
     <div class = "row">
         <h1 class="p-3 mb-2 bg-danger text-white"> Track List </h1>
