--- a/src/main/resources/templates/track_error.html
+++ b/src/main/resources/templates/track_error.html
@@ -37,6 +37,7 @@
         </ul>
     </div>
 </nav>
+<!-- Track delete error screen - directs user to Equipment update screen to correct track locations before allowing delete -->
 <div class="container">
     <div class="card" >
         <div class="card-body text-white bg-danger" >
